# listen_brainz_assigment

./: README.md  pyproject.toml
listen_brainz_assigment/analytics/: results.py
listen_brainz_assigment/database/: create_db.py
listen_brainz_assigment/etl/: commons.py  ingest_data.py  ingest_data_optimized.py
listen_brainz_assigment/results/: daily_active_users.csv  first_song_per_user.csv  top_10_users.csv  top_3_days_per_user.csv  users_march_1_2019.csv
tests/: __init__.py
